hyrax_tests/errors/bes_timeout_error.ascii
url = http://localhost:8080/opendap/data/nc/fnoc1.nc.ascii?error(6)
-s
